--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "test_petstore_api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "",
-  "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty --write . && git add -A . && npm test"
+    "name": "test_petstore_api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "",
+    "scripts": {
+        "test": "jest",
+        "test:watch": "jest --watch"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty --write . && git add -A . && npm test"
+        }
+    },
+    "keywords": [],
+    "author": "Lukas Lewandowski",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/core": "^7.13.16",
+        "@babel/preset-env": "^7.13.15",
+        "babel-eslint": "^10.1.0",
+        "babel-jest": "^26.6.3",
+        "cucumber": "^7.0.0-rc.0",
+        "eslint": "^7.25.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-standard": "^5.0.0",
+        "faker": "^5.5.3",
+        "husky": "^6.0.0",
+        "jest": "^26.6.3",
+        "jest-cucumber": "^3.0.1",
+        "prettier": "^2.2.1",
+        "supertest": "^6.1.3"
     }
-  },
-  "keywords": [],
-  "author": "Lukas Lewandowski",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/preset-env": "^7.13.15",
-    "babel-jest": "^26.6.3",
-    "cucumber": "^7.0.0-rc.0",
-    "faker": "^5.5.3",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "jest-cucumber": "^3.0.1",
-    "prettier": "^2.2.1",
-    "supertest": "^6.1.3"
-  }
 }
