--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "extends": "eslint:recommended",
-    "plugins": ["prettier", "standard"],
+    "plugins": ["standard"],
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2021,
@@ -14,7 +14,6 @@
     },
     "rules": {
         "space-before-function-paren": 0,
-        "new-cap": 0,
-        "prettier/prettier": 2
+        "new-cap": 0
     }
 }
