--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "",
     "scripts": {
         "test": "jest",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "lint": "npx eslint ."
     },
     "husky": {
         "hooks": {
@@ -22,7 +23,6 @@
         "babel-jest": "^26.6.3",
         "cucumber": "^7.0.0-rc.0",
         "eslint": "^7.25.0",
-        "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-standard": "^5.0.0",
         "faker": "^5.5.3",
         "husky": "^6.0.0",
